--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -2,28 +2,32 @@ name: Swift
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   macos:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: swift build
-    - name: Test
-      run: swift test
+      - uses: actions/checkout@v3
+      - name: Build
+        run: swift build
+      - name: Test
+        run: swift test
 
   linux:
     runs-on: ubuntu-latest
-    container:
-      image: swift:5.4
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: swift build
-    - name: Test
-      run: swift test
 
+    strategy:
+      matrix:
+        swift: ["5.9.1", "5.7.3"]
+
+    container:
+      image: swift:${{ matrix.swift }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        run: swift build
+      - name: Test
+        run: swift test
